--- a/pom.xml
+++ b/pom.xml
@@ -21,4 +21,12 @@
     <name>Change Log History</name>
     <version>1.2-SNAPSHOT</version>
     <url>http://wiki.hudson-ci.org/display/HUDSON/Change+Log+History+Plugin</url>
+
+    <developers>
+      <developer>
+        <id>mindless</id>
+        <name>Alan Harder</name>
+        <email>alan.harder@sun.com</email>
+      </developer>
+    </developers>
 </project>
