--- a/pom.xml
+++ b/pom.xml
@@ -2,31 +2,29 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.jvnet.hudson.plugins</groupId>
+        <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.357</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>1.397</version>
     </parent>
-
-    <dependencies>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>subversion</artifactId>
-            <version>(1.11,]</version>
-        </dependency>
-    </dependencies>
 
     <artifactId>changelog-history</artifactId>
     <packaging>hpi</packaging>
     <name>Change Log History</name>
     <version>1.3-SNAPSHOT</version>
-    <url>http://wiki.hudson-ci.org/display/HUDSON/Change+Log+History+Plugin</url>
+    <url>http://wiki.jenkins-ci.org/display/JENKINS/Change+Log+History+Plugin</url>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.jvnet.hudson.plugins</groupId>
+            <artifactId>subversion</artifactId>
+            <version>(1.17,]</version>
+        </dependency>
+    </dependencies>
 
     <developers>
       <developer>
         <id>mindless</id>
         <name>Alan Harder</name>
-        <email>mindless@dev.java.net</email>
       </developer>
     </developers>
 </project>
