--- a/pom.xml
+++ b/pom.xml
@@ -27,4 +27,10 @@
         <name>Alan Harder</name>
       </developer>
     </developers>
+
+    <scm>
+      <connection>scm:git:git://github.com/jenkinsci/changelog-history-plugin.git</connection>
+      <developerConnection>scm:git:git@github.com:jenkinsci/changelog-history-plugin.git</developerConnection>
+      <url>https://github.com/jenkinsci/changelog-history-plugin</url>
+    </scm>
 </project>
