--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jvnet.hudson.plugins</groupId>
+            <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>subversion</artifactId>
-            <version>(1.17,]</version>
+            <version>(1.25,]</version>
         </dependency>
     </dependencies>
 
