--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.580.3</version>
+        <version>2.13</version>
     </parent>
 
     <artifactId>changelog-history</artifactId>
@@ -13,6 +13,13 @@
     <version>1.6-SNAPSHOT</version>
     <url>http://wiki.jenkins-ci.org/display/JENKINS/Change+Log+History+Plugin</url>
 
+    <properties>
+        <jenkins.version>1.580.3</jenkins.version>
+        <hpi-plugin.version>1.106</hpi-plugin.version>
+        <stapler-plugin.version>1.17</stapler-plugin.version>
+        <java.level>6</java.level>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -20,6 +27,19 @@
             <version>2.6</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <configuration>
+                    <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
     <developers>
       <developer>
@@ -37,7 +57,7 @@
       <developerConnection>scm:git:git@github.com:jenkinsci/changelog-history-plugin.git</developerConnection>
       <url>https://github.com/jenkinsci/changelog-history-plugin</url>
       <tag>HEAD</tag>
-  </scm>
+    </scm>
 
     <repositories>
         <repository>
