--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>changelog-history</artifactId>
     <packaging>hpi</packaging>
     <name>Change Log History</name>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.6</version>
     <url>http://wiki.jenkins-ci.org/display/JENKINS/Change+Log+History+Plugin</url>
 
     <properties>
@@ -56,7 +56,7 @@
       <connection>scm:git:git://github.com/jenkinsci/changelog-history-plugin.git</connection>
       <developerConnection>scm:git:git@github.com:jenkinsci/changelog-history-plugin.git</developerConnection>
       <url>https://github.com/jenkinsci/changelog-history-plugin</url>
-      <tag>HEAD</tag>
+      <tag>changelog-history-1.6</tag>
     </scm>
 
     <repositories>
